# SelecEval

./: .gitignore  404.html  LICENSE  README.md  config.json  index.html  mkdocs.yml  pydoc-config.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation.yml
algorithms/active/: index.html
algorithms/cep/: index.html
algorithms/fedcs/: index.html
algorithms/powd/: index.html
algorithms/random/: index.html
config/: index.html
data/adding_new_data_distributions/: index.html
docs/: client_module.md  config.md  data_distribution.md  datahandler_module.md  examples.md  index.md  installation.md  thesis.md
docs/algorithms/: active.md  cep.md  fedcs.md  powd.md  random.md
docs/data/: adding_new_data_distributions.md
docs/examples/: example_1.md  example_2.md  index.md
docs/module_docs/: __main__.md  client.md  datahandler.md  models.md  selection.md  strategy.md  util.md  validation.md
docs/simulation/: configuration.md  network_bandwidth.md  performance_factor.md  reliability.md
docs/validation/: configuration.md  output.md
evaluation/: eval_data_distribution.ipynb  eval_result.ipynb  eval_validation.ipynb
examples/: example_1.json  example_2.json  examples.md  index.html
examples/example_1/: index.html
examples/example_2/: index.html
examples/paper/: feature_skew.json  flexible_client_count.json  (+5 more)
installation/: index.html
search/: search_index.json
seleceval/: __init__.py  __main__.py  client_configurations.csv  client_states.csv  config.json  data_distribution.csv  output.json
thesis/: index.html
(+140 files in other folders)
