[tool.poetry]
name = "bachelorthesis"
version = "0.1.0"
description = ""
authors = ["Jakob Steimle <jakob.steimle@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.4.0"
pandas = "^2.0.2"
randomname = "^0.2.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
